# flexNet

./: .gitignore  .gitlab-ci-bitrate.yml  .gitlab-ci-controller.yml  .gitlab-ci-link.yml  .gitlab-ci-network.yml  .gitlab-ci-node.yml  .gitlab-ci-randomvariable.yml  .gitlab-ci-simulator.yml  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.md  Node.cpp  Node.hpp  OneBigHeader.cmake  README.md  coverage.sh  node.cpp
bitrate/: bitrate.json
examples/: README.md  e001_FF.cpp  e002_EF.cpp
examples/BDM/: main_results.cpp
examples/BDM/networks/: COST239.json  EuroCore.json  NSFNet.json  bitrate_iroBand_CLSE.json  routes_cost239.json
examples/BDM/src/: aux_route.hpp  offline_approach.cpp  offline_approach_debug.cpp  variants.cpp
examples/SDM/: main.cpp  simulator.hpp
examples/SDM/networks/: NSFNet.json  USNet.json  bitrates.json
examples/SDM/src/: simulator.hpp  utils.cpp
examples/e001/: NSFNet.json  main.cpp  routes.json
examples/e002/: main.cpp
examples/e003/: main.cpp
examples/e004/: a.out  buffer.cpp  main.cpp  mainV2.cpp  mainV3.cpp  mainV4.cpp  offline_approach.cpp  output.txt  simulator.hpp  test.cpp  test.txt
examples/e004/Rout/: realloc10.txt  realloc11.txt  realloc12.txt  realloc13.txt  realloc14.txt  realloc15.txt  realloc16.txt  realloc17.txt  realloc18.txt  realloc19.txt  realloc20.txt  realloc21.txt  realloc22.txt  realloc23.txt  realloc24.txt  realloc25.txt  realloc26.txt  realloc27.txt  realloc28.txt  realloc29.txt  realloc30.txt  (+21 more)
networks/: 5nodeBus.json  NSFNet.json  NSFNet_routes.json  SDMnet.json  SDMnet_routes.json  networks_NSFNet.json
src/: allocator.cpp  allocator.hpp  bitrate.cpp  bitrate.hpp  connection.cpp  connection.hpp  controller.cpp  controller.hpp  dummy_allocator.cpp  dummy_allocator.hpp  event.cpp  event.hpp  exp_variable.cpp  exp_variable.hpp  link.cpp  link.hpp  network.cpp  network.hpp  node.cpp  node.hpp  random_variable.cpp  random_variable.hpp  request.cpp  request.hpp  simulator.cpp  simulator.hpp  uniform_variable.cpp  uniform_variable.hpp  version.hpp
test/: CMakeLists.txt  catch.hpp  test_bitrate.cpp  test_controller.cpp  test_link.cpp  test_network.cpp  test_node.cpp  test_random_variable.cpp  test_simulator.cpp  test_simulator.hpp
(+10 files in other folders)
